[#8] Add Control panel including Keyboard layout selector

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 /navilIME_uninstaller/navilIME_uninstaller/bin
 /navilIME_uninstaller/DllFinder/obj
 /navilIME_uninstaller/DllFinder/bin
+/navilIME_control/navilIME_control/bin
+/navilIME_control/navilIME_control/obj
+/navilIME_control/.vs
